# document_service_OB3

./: .coverage  .env  .env.example  .gitignore   Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
config/: settings.py  urls.py
documents/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
documents/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
